component: navbar added, not mobile friendly

--- a/src/partials/_colors.scss
+++ b/src/partials/_colors.scss
@@ -1,5 +1,11 @@
-$white: #fff;
-$ripe_mango: #fdbb2d;
-$turquoise: #22c1c3;
-$bluey_grey: #527482;
-$black: #000;
+$white_coffee: #e8e0d4;
+$dark_vanilla: #dcc9a8;
+$grullo: #b2a68c;
+$olive_drab_camouflage: #50483b;
+$black: #141215;
+
+// #e8e0d4	(232,224,212)
+// #dcc9a8	(220,201,168)
+// #b2a68c	(178,166,140)
+// #50483b	(80,72,59)
+// #141215	(20,18,21)
