--- a/src/components/heroHeading/HeroHeading.scss
+++ b/src/components/heroHeading/HeroHeading.scss
@@ -3,9 +3,9 @@
 @use '../../partials/textstyles' as *;
 @use '../../partials/typeface' as *;
 
-.heroText{
-    &__container{
-        display: flex;
-        flex-direction: column;
+.heroHeading{
+    &__text{
+        margin: 70px 0;
+        font-size: $h1_text_size_dt;
     }
 }
